# MotionTrackCpp

./: .gitignore  CMakeLists.txt  README.md
include/: MotionTracker.h  STrack.h  YOLOv7Detector.h  cmdline.h  io.h  kalmanFilter.h  logging.h
src/: MotionTracker.cpp  STrack.cpp  YOLOv7Detector.cpp  kalmanFilter.cpp  main.cpp  utils.cpp
